# CMake-Lessons

./: .gitignore  .gitmodules
CMake_Skeleton/skeleton/: .clang-tidy  BuildOptions.cmake  CMakeLists.txt  Makefile
CMake_Skeleton/skeleton/src/: CMakeLists.txt
CMake_Skeleton/skeleton/src/app/: CmakeLists.txt
CMake_Skeleton/skeleton/src/lib/: CmakeLists.txt
CMake_Skeleton/skeleton/src/lib/example/: example.h
CMake_Skeleton/skeleton/src/utility/: CmakeLists.txt
CMake_Skeleton/skeleton/test/: CMakeLists.txt  main.c  test_suite.c  tests.h
Cmake/libc-skeleton/: .clang-tidy  BuildOptions.cmake  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Packaging.cmake  clang_format.patch  cmake_course.sublime-project  cmake_course.sublime-workspace  cmake_skeleton.sublime-project  cmake_skeleton.sublime-workspace  coverage.xml
Cmake/libc-skeleton/CPM_modules/: Findopenlibm.cmake  Findprintf.cmake
Cmake/libc-skeleton/arch/aarch64/: CMakeLists.txt
Cmake/libc-skeleton/arch/x86/: CMakelists.txt
Cmake/libc-skeleton/arch/x86_64/: CMakelists.txt
Cmake/libc-skeleton/buildresults/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
Cmake/libc-skeleton/buildresults/CPM_modules/: Findopenlibm.cmake  Findprintf.cmake
Cmake/libc-skeleton/buildresults/src/: CTestTestfile.cmake  cmake_install.cmake
Cmake/libc-skeleton/buildresults/test/: CTestTestfile.cmake  cmake_install.cmake
Cmake/libc-skeleton/cmake/: CheckAndApplyFlags.cmake  CodeCoverage.cmake  Conversions.cmake
Cmake/libc-skeleton/cmake/linker-scripts/stm/: STM32F103VBIx_FLASH.ld
Cmake/libc-skeleton/cmake/toolchains/: nrf52840.cmake
Cmake/libc-skeleton/cmake/toolchains/cross/: STM32F103VBIx.cmake  arm-none-eabi-gcc.cmake  cortex-m3_softfloat.cmake  cortex-m4_hardfloat.cmake  cortex-m7_hardfloat.cmake
Cmake/libc-skeleton/cmake/toolchains/native/: clang.cmake
Cmake/libc-skeleton/src/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
Cmake/libc-skeleton/src/crt/: crt.c
Cmake/libc-skeleton/src/ctype/: isalnum.c
Cmake/libc-skeleton/src/gdtoa/include/: arith.h  gd_qnan.h  gdtoa.h  gdtoaimp.h
Cmake/libc-skeleton/src/gdtoa/src/: dtoa.c  strtod.c
Cmake/libc-skeleton/test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
Cmake/libc-skeleton/test/app/: main.c
Cmake/libc-skeleton/tools/: clang-tidy.sh  format-patch.sh  format.sh
Introduction to Build Systems Using Make/Compilation/: libmultifile_func_dyn.dylib  multifile_program  standalone_program  standalone_program.c  standalone_program.s
Introduction to Build Systems Using Make/Compilation/Exercises/Single Source/: single_source.c  single_source.s
Introduction to Build Systems Using Make/Compilation/include/: multifile_func.h
Introduction to Build Systems Using Make/Compilation/src/: multifile_main.c
Introduction to Build Systems Using Make/Compilation/src/lib/: multifile_func.c
Introduction to Build Systems Using Make/Software Construction/libmemory-source/buildresults/: libmemory_freelist_test
meson_build/: .gitignore  meson_build.sublime-project  meson_build.sublime-workspace
meson_build/libc-skeleton/: .clang-tidy  Makefile  meson.build  meson_options.txt
meson_build/libc-skeleton/arch/: meson.build
meson_build/libc-skeleton/arch/aarch64/: meson.build
meson_build/libc-skeleton/arch/arm/: meson.build
meson_build/libc-skeleton/arch/x86/: meson.build
meson_build/libc-skeleton/arch/x86_64/: meson.build
meson_build/libc-skeleton/src/: meson.build
meson_build/libc-skeleton/subprojects/: cmocka.wrap  openlibm.wrap  printf.wrap
meson_build/libc-skeleton/subprojects/packagefiles/openlibm/: meson.build
meson_build/libc-skeleton/subprojects/packagefiles/printf/: meson.build
meson_build/libc-skeleton/subprojects/packagefiles/printf/test/: meson.build
meson_build/libc-skeleton/test/: meson.build
meson_build/libc-skeleton/test/app/: main.c
meson_build/libc-skeleton/tools/: clang-tidy.sh  cppcheck.sh  format_patch.sh  package.sh
meson_build/reference/000-initial-build/: meson.build
meson_build/reference/001-printf-dep/: meson.build
meson_build/reference/001-printf-dep/subprojects/: printf.wrap
meson_build/reference/002-test-setup/: meson.build
meson_build/reference/002-test-setup/subprojects/: openlibm.wrap
meson_build/reference/002-test-setup/subprojects/packagefiles/printf/: meson.build
meson_build/reference/003-run-targets/: meson.build
meson_build/reference/003-run-targets/src/: meson.build
meson_build/reference/003-run-targets/test/: meson.build
meson_build/reference/004-options-and-flags/: meson.build
meson_build/reference/004-options-and-flags/src/: meson.build
meson_build/reference/004-options-and-flags/subprojects/packagefiles/printf/: meson.build
meson_build/reference/004-options-and-flags/subprojects/packagefiles/printf/test/: meson.build
meson_build/reference/004-options-and-flags/test/: meson.build
meson_build/reference/005-cross-compilation/: cross-compile.sublime-project  cross-compile.sublime-workspace  meson.build
meson_build/reference/005-cross-compilation/docs/: Doxyfile
meson_build/reference/005-cross-compilation/src/: meson.build
meson_build/reference/005-cross-compilation/subprojects/cmocka-1.1.5/: .meson-subproject-wrap-hash.txt
meson_build/reference/005-cross-compilation/subprojects/cmocka-1.1.5/src/: meson.build
meson_build/reference/005-cross-compilation/subprojects/packagefiles/printf/: meson.build
meson_build/reference/005-cross-compilation/test/: meson.build
meson_build/reference/007-exercises/: meson.build
meson_build/reference/007-exercises/src/: meson.build
meson_build/reference/007-exercises/test/: meson.build
meson_build/reference/008-native/: meson.build
meson_build/reference/008-native/subprojects/packagefiles/printf/test/: meson.build
meson_build/reference/009-embedded/: meson.build
meson_build/reference/010-linker-script-overhaul/: meson.build
meson_build/reference/011-tooling/: meson.build
(+9 files in other folders)
